--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "file-saver": "2.0.5",
+    "libphonenumber-js": "^1.12.29",
     "lucide-react": "0.294.0",
     "mammoth": "^1.6.0",
     "next": "14.0.4",
